--- a/222.html
+++ b/222.html
@@ -5,25 +5,25 @@
     <title>脚本示例</title>
     <style>
         body {
-            background-color: pink; /* 设置背景颜色为粉色 */
+            background-color: pink;
         }
         .main-content {
             text-align: center;
             margin-top: 50px;
         }
         .button {
-            background-color: red; /* 设置按钮颜色为红色 */
-            color: white; /* 设置按钮文字颜色为白色 */
+            background-color: red;
+            color: white;
             padding: 10px 20px;
             border: none;
             cursor: pointer;
         }
         .info {
-            color: blue; /* 设置文本颜色为蓝色 */
+            color: blue;
             margin-top: 20px;
         }
         .footer {
-            color: red; /* 设置文本颜色为红色 */
+            color: red;
             margin-top: 50px;
         }
     </style>
@@ -37,7 +37,7 @@
 
     <script>
         function loadExternalPage() {
-            // 使用JavaScript在新窗口中打开指定链接
+           
             window.open("http://124.220.36.211/xyiosQQ.html");
         }
     </script>
