--- a/222.html
+++ b/222.html
@@ -1,45 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>脚本示例</title>
-    <style>
-        body {
-            background-color: pink;
-        }
-        .main-content {
-            text-align: center;
-            margin-top: 50px;
-        }
-        .button {
-            background-color: red;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-        }
-        .info {
-            color: blue;
-            margin-top: 20px;
-        }
-        .footer {
-            color: red;
-            margin-top: 50px;
-        }
-    </style>
-</head>
-<body>
-    <div class="main-content">
-        <button class="button" onclick="loadExternalPage()">脚本仅供学习</button>
-        <div class="info">脚本作者@ios151</div>
-    </div>
-    <div class="footer">脚本仅供学习，禁止用于非法用途。</div>
-
-    <script>
-        function loadExternalPage() {
-           
-            window.open("http://124.220.36.211/xyiosQQ.html");
-        }
-    </script>
-</body>
-</html>
+<script>
+<!--
+document.write(unescape("%3C%21DOCTYPE%20html%3E%0A%3Chtml%3E%0A%3Chead%3E%0A%20%20%20%20%3Cmeta%20charset%3D%22UTF-8%22%3E%0A%20%20%20%20%3Ctitle%3E%u811A%u672C%u793A%u4F8B%3C/title%3E%0A%20%20%20%20%3Cstyle%3E%0A%20%20%20%20%20%20%20%20body%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20background-color%3A%20pink%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20.main-content%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20text-align%3A%20center%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20margin-top%3A%2050px%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20.button%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20background-color%3A%20red%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20color%3A%20white%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20padding%3A%2010px%2020px%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20border%3A%20none%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20cursor%3A%20pointer%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20.info%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20color%3A%20blue%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20margin-top%3A%2020px%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20.footer%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20color%3A%20red%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20margin-top%3A%2050px%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%3C/style%3E%0A%3C/head%3E%0A%3Cbody%3E%0A%20%20%20%20%3Cdiv%20class%3D%22main-content%22%3E%0A%20%20%20%20%20%20%20%20%3Cbutton%20class%3D%22button%22%20onclick%3D%22loadExternalPage%28%29%22%3E%u811A%u672C%u4EC5%u4F9B%u5B66%u4E60%3C/button%3E%0A%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22info%22%3E%u811A%u672C%u4F5C%u8005@ios151%3C/div%3E%0A%20%20%20%20%3C/div%3E%0A%20%20%20%20%3Cdiv%20class%3D%22footer%22%3E%u811A%u672C%u4EC5%u4F9B%u5B66%u4E60%uFF0C%u7981%u6B62%u7528%u4E8E%u975E%u6CD5%u7528%u9014%u3002%3C/div%3E%0A%0A%20%20%20%20%3Cscript%3E%0A%20%20%20%20%20%20%20%20function%20loadExternalPage%28%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%0A%20%20%20%20%20%20%20%20%20%20%20%20window.open%28%22http%3A//124.220.36.211/xyiosQQ.html%22%29%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%3C/script%3E%0A%3C/body%3E%0A%3C/html%3E%0A"));
+//-->
+</script>
